@@ -54,6 +54,14 @@
             }
         },
         {
+            "script": {
+                "lang": "painless",
+                "source": "ctx.event.duration = Math.round(ctx.kibana.log.meta.res.responseTime * params.scale)",
+                "params": { "scale": 1000000 },
+                "if": "ctx.kibana.log.meta?.res?.responseTime != null"
+            }
+        },
+        {
             "rename": {
                 "field": "kibana.log.meta.res.responseTime",
                 "target_field": "http.response.elapsed_time",
@@ -74,6 +82,62 @@
                 "ignore_missing": true
             }
         },
+
+        {
+            "rename": {
+                "field": "kibana.log.meta.req.headers.referer",
+                "target_field": "http.request.referrer",
+                "ignore_missing": true
+            }
+        },
+        {
+            "rename": {
+                "field": "kibana.log.meta.req.headers.user-agent",
+                "target_field": "user_agent.original",
+                "ignore_missing": true
+            }
+        },
+        {
+            "rename": {
+                "field": "kibana.log.meta.req.remoteAddress",
+                "target_field": "source.address",
+                "ignore_missing": true
+            }
+        },
+        {
+            "set": {
+                "field": "source.ip",
+                "value": "{{source.address}}",
+                "if": "ctx.source?.address != null"
+            }
+        },
+        {
+            "rename": {
+                "field": "kibana.log.meta.req.url",
+                "target_field": "url.original",
+                "ignore_missing": true
+            }
+        },
+
+        {
+            "remove": {
+                "field": "kibana.log.meta.req.referer",
+                "ignore_missing": true
+            }
+        },
+        {
+            "remove": {
+                "field": "kibana.log.meta.statusCode",
+                "ignore_missing": true
+            }
+        },
+        {
+            "remove": {
+                "field": "kibana.log.meta.method",
+                "ignore_missing": true
+            }
+        },
+
         {
             "date": {
                 "field": "read_timestamp",
