@@ -3,14 +3,15 @@
         "@timestamp": "2018-05-09T10:57:55.000Z",
         "ecs.version": "1.0.0-beta2",
         "event.dataset": "kibana.log",
+        "event.duration": 26000000,
         "event.module": "kibana",
         "fileset.name": "log",
         "http.request.method": "get",
+        "http.request.referrer": "http://localhost:5601/app/kibana",
         "http.response.content_length": 9,
         "http.response.elapsed_time": 26,
         "http.response.status_code": 304,
         "input.type": "log",
-        "kibana.log.meta.method": "get",
         "kibana.log.meta.req.headers.accept": "*/*",
         "kibana.log.meta.req.headers.accept-encoding": "gzip, deflate, br",
         "kibana.log.meta.req.headers.accept-language": "en-US,en;q=0.9,de;q=0.8",
@@ -19,13 +20,7 @@
         "kibana.log.meta.req.headers.if-modified-since": "Thu, 03 May 2018 09:45:28 GMT",
         "kibana.log.meta.req.headers.if-none-match": "\"24234c1c81b3948758c1a0be8e5a65386ca94c52\"",
         "kibana.log.meta.req.headers.origin": "http://localhost:5601",
-        "kibana.log.meta.req.headers.referer": "http://localhost:5601/app/kibana",
-        "kibana.log.meta.req.headers.user-agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.139 Safari/537.36",
-        "kibana.log.meta.req.referer": "http://localhost:5601/app/kibana",
-        "kibana.log.meta.req.remoteAddress": "127.0.0.1",
-        "kibana.log.meta.req.url": "/ui/fonts/open_sans/open_sans_v15_latin_600.woff2",
         "kibana.log.meta.req.userAgent": "127.0.0.1",
-        "kibana.log.meta.statusCode": 304,
         "kibana.log.meta.type": "response",
         "kibana.log.tags": [],
         "log.offset": 0,
@@ -33,7 +28,11 @@
         "process.pid": 69410,
         "service.name": [
             "kibana"
-        ]
+        ],
+        "source.address": "127.0.0.1",
+        "source.ip": "127.0.0.1",
+        "url.original": "/ui/fonts/open_sans/open_sans_v15_latin_600.woff2",
+        "user_agent.original": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.139 Safari/537.36"
     },
     {
         "@timestamp": "2018-05-09T10:59:12.000Z",
